Read a Lombok corpus by delomboking it first
codeflow parses with `-proc:none` and no classpath, which is what lets it be
pointed at a bare directory — and it means a Lombok-generated member does not
exist in the attributed tree. A `@Getter` accessor, a `@RequiredArgsConstructor`
constructor and `@Slf4j`'s `log` field are all names javac cannot resolve, so
every use of one takes the opaque EXTERNAL path. Nothing is wrong: an accessor
really is a call whose body codeflow does not have. But the reader is told
"outside the analysed sources" about a field declared eight lines up.

`delombok` is Lombok's own answer and it writes ordinary Java source, which is
codeflow's input contract with nothing added. `scripts/delombok.sh` is the whole
of it. Running Lombok *inside* codeflow instead would mean a jar on the processor
path, `--add-opens` on the analysing JVM — where the installed CLI's start script
cannot be given them — and letting a processor found in the analysed corpus
execute during what the reader thinks is a read.

Measured on `fineract-progressive-loan` (81 files), rooted at
`ProgressiveEMICalculator#calculateRateFactorPerPeriodForInterest`: EXTERNAL 365
-> 308, the drop accounted for exactly by `getFromDate` (31), `getDueDate` (23),
`mc` (2) and `loanProductRelatedDetail` (1) reaching zero. Every label blamed on
BigDecimal, the JDK and corpus scoping is unchanged, and the non-accessor block
list is identical, which is what says this addresses one cause and only one.

Two things the measurement removed rather than confirmed, both in the doc. The
cost is boxes, not nodes — 57 opaque nodes became 78 method blocks, each holding
a field read and a RETURN, so blocks rose 236% where nodes rose 11%. And the
identity win did not happen: OBJ_VARIABLE rose by exactly one per inlining, so
no two merged, because the receivers are themselves opaque and carry no MemPos
to file the field under. Making the accessor transparent does not help while the
object is not.

The trade i